E-banking integration: loans impl